<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginEnd="30dp"
    android:layout_marginStart="30dp"
    android:layout_gravity="center"
    tools:context=".LoginActivity"
    android:background="#218FBC"
    >

    <ImageView
        android:id="@+id/person_icon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/person" />

    <EditText
        android:id="@+id/userNameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/userPasswordID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/loginBtnID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#3F51B5"
        android:layout_gravity="center"
        android:text="@string/log_in"
         />
</LinearLayout>